# dig-peer — the DIG Network peer client.
#
# `DigPeer::connect(peer, tls)` establishes a mutually-authenticated (mTLS) connection to a DIG
# Network peer by driving `dig-nat`'s full traversal ladder (direct → UPnP → NAT-PMP → PCP →
# hole-punch → relayed), captures the peer's verified `peer_id` + BLS-G1 identity from the handshake,
# and exposes typed RPC over `dig-rpc-protocol`. Directed control RPCs are end-to-end sealed to the
# peer's captured BLS key (§5.4) ON TOP of mTLS — a relay that terminates TLS sees only ciphertext.
# `disconnect()` cleanly tears the connection down.
#
# dig-peer is the CLIENT mirror of `dig-rpc`'s server. It wraps `dig-nat`'s `PeerConnection` (NOT
# `dig-gossip`, which is the mesh/broadcast layer). DigPeer connects to DIG Network peers; it is NOT
# ChiaPeer (Chia full-node client) — it pulls in zero chia-full-node protocol.
#
# Hierarchy: L20 (`20-domain/dig-peer`). Every dependency is strictly LOWER (reference-down):
# dig-nat (L10), dig-message (L10), dig-rpc-protocol (L00), dig-tls (L00), dig-ip (L00).
[package]
name = "dig-peer"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "Apache-2.0 OR MIT"
description = "The DIG Network peer client: DigPeer::connect(peer, tls) drives dig-nat's full direct→relay traversal ladder, exposes typed RPC over dig-rpc-protocol, seals directed calls end-to-end to the peer's captured BLS-G1 identity (§5.4) on top of mTLS, and disconnects cleanly. The client mirror of dig-rpc's server; distinct from ChiaPeer."
repository = "https://github.com/DIG-Network/dig-peer"
readme = "README.md"
keywords = ["dig", "p2p", "rpc", "peer", "mtls"]
categories = ["network-programming", "api-bindings"]

[dependencies]
# The transport: one connect() over the full direct→relay NAT-traversal ladder, returning a verified
# mTLS PeerConnection. dig-peer wraps this — it never hand-rolls dialing, mTLS, or peer_id pinning.
dig-nat = { version = "0.7" }
# The §5.4/#1075 recipient-seal: seal_message/open_message (DHKEM-over-G1 + BLS-G2 signature +
# anti-replay). DigPeer applies it per directed RPC to the peer's captured BLS-G1 key; fail-closed.
dig-message = { version = "0.5" }
# The canonical RPC wire contract: the JSON-RPC 2.0 envelope, the method catalogue, the typed
# request/response types, and the error taxonomy. DigPeer exposes typed clients for these — never a
# hand-rolled wire type.
dig-rpc-protocol = { version = "0.3" }
# The mTLS identity: the per-peer NodeCert the caller presents and dig-nat pins the peer_id against.
# Re-exported from dig-nat, depended on directly so callers construct a NodeCert without a dig-nat
# import and so DigPeer can read the local BLS identity for sealing.
dig-tls = { version = "0.1" }

# Byte-deterministic Chia-Streamable DID/G1 wire types (Bytes32 identity id) the seal uses, plus the
# Streamable to_bytes/from_bytes trait for the sealed dig-message envelope.
chia-protocol = "0.26"
chia-traits = "0.26"

# Async runtime + stream I/O for the RPC framing over the mux.
tokio = { version = "1", features = ["io-util", "rt", "macros", "time", "sync"] }
# Wire (de)serialization of the JSON-RPC envelope carried over the mux stream.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured observability for the connect ladder + seal decisions (a warn! on a fail-closed refusal).
tracing = { version = "0.1", default-features = false, features = ["std"] }
# The crate error taxonomy.
thiserror = "1"

[dev-dependencies]
# Loopback e2e: a real dig-tls mTLS server + dig-nat PeerSession the DigPeer client connects to.
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "test-util"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

[lib]
doctest = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
